[package]
name = "base_station"
version = "0.1.0"
authors = ["Michael Chesser <michael.chesser@adelaide.edu.au>"]

[dependencies]
crossbeam-channel = "0.2.6"
env_logger = "0.5.13"
hex = "0.3.2"
log = "0.4.5"
serialport = "3.0.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
toml = "0.4.8"
ws = "0.7.9"
reqwest = "0.9.3"
