[package]
name = "base_station"
version = "0.2.0"
authors = ["Michael Chesser <michael.chesser@adelaide.edu.au>"]
edition = "2015"

[dependencies]
crossbeam-channel = "0.3.8"
env_logger = "0.6.2"
hex = "0.3.2"
log = "0.4.6"
serialport = "3.3.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
toml = "0.5.1"
ws = "0.8.1"
reqwest = "0.9.18"
