[package]
name = "btracked-server"
version = "0.1.0"
authors = ["Michael Chesser <michael.chesser@adelaide.edu.au>"]

[dependencies]
actix = "0.7"
actix-web = "0.7"
crossbeam-channel = "0.2.6"
diesel = { version = "1.3.3", features = ["r2d2", "sqlite"] }
dotenv = "0.13.0"
env_logger = "0.5"
futures = "0.1"
image = "0.20"
lazy_static = "1"
log = "0.4"
nalgebra = "0.16"
nalgebra-glm = "0.1"
palette = "0.4.1"
parking_lot = "0.6.4"
rand = "0.5.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
tracking = { path = "../tracking" }

[profile.release]
debug = true
