[package]
name = "btracked-server"
version = "0.2.0"
authors = ["Michael Chesser <michael.chesser@adelaide.edu.au>"]
edition = "2015"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.19"
crossbeam-channel = "0.2.6"
diesel = { version = "1.4.2", features = ["r2d2", "sqlite"] }
dotenv = "0.14.1"
env_logger = "0.6.2"
futures = "0.1.28"
image = "0.21.2"
lazy_static = "1.3.0"
log = "0.4.6"
nalgebra = "0.18.0"
nalgebra-glm = "0.4.0"
palette = "0.4.1"
parking_lot = "0.8.0"
rand = "0.6.5"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
tracking = { path = "../tracking" }
