[package]
name = "tracking"
version = "0.4.0"
authors = ["Michael Chesser"]

[dependencies]
nalgebra = { version = "0.16", features = ["serde-serialize"] }
nalgebra-glm = "0.1"
ncollide2d = "0.17"
particle_filter = { git = "https://github.com/mchesser/particle_filter" }
probability = "0.15"
rand = "0.5"
rayon = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
streaming-stats = "0.2.2"